# SISE-only-one

./: .gitignore  CMakeLists.txt  main.cpp
ftims/: runprog.sh
sise/: headerConfig.h  siseException.cpp  siseException.h  siseExtension.h
sise/board/: board.cpp  board.h
sise/solver/: solver.cpp  solver.h
sise/strategy/: hardPattern.cpp  strategy.cpp  strategy.h  strategyFactory.cpp  strategyFactory.h
sise/strategy/heur/: ASTR.cpp  ASTR.h  hamming.cpp  hamming.h  heuristics.cpp  heuristics.h  manhattan.cpp  manhattan.h
sise/strategy/nonheur/: BFS.cpp  BFS.h  DFS.cpp  DFS.h  hardPattern.cpp  hardPattern.h
sise/util/: arguments.cpp  arguments.h  fileIn.cpp  fileIn.h  fileOut.cpp  fileOut.h  timer.cpp  timer.h
testData/: sol.txt  stat.txt  testMatrix.txt
